# lecture

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  security.py  storage.py
app/middleware/: __init__.py  rate_limit.py
app/routers/: __init__.py  auth.py  health.py  items.py  portfolios.py  resumes.py  uploads.py
app/schemas/: __init__.py  common.py  item.py  portfolio.py  resume.py  upload.py  user.py
