[tool.poetry]
name = "backend-boilerplate"
version = "0.1.0"
description = "Бойлерплейт бэкенда: FastAPI + Poetry + MongoDB (в облаке)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pymongo = "^4.10.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
